<resources>
    <string name="app_name">M-SHOFCO</string>
    <string name="app_name_full">M-SHOFCO</string>
    <string name="national_id">National ID</string>
    <string name="close">Close</string>
    <string name="enter_otp_sent_to">Enter OTP sent to  </string>
    <string name="verify_otp_to_continue">Verify OTP to continue</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="required">This field is required</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="good_ninght">Good night</string>
    <string name="okay">Okay</string>
    <string name="please_complete_otp">Please complete OTP</string>
    <string name="dashes_long">--------------------</string>
    <string name="log_out">Log Out</string>
    <string name="change">Change</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="begin_registration">Begin Registration</string>
    <string name="log_in">Login</string>
    <string name="open_account">Open Account</string>
    <string name="information">Information</string>
    <string name="help">Help</string>
    <string name="member_number">National ID</string>
    <string name="pin">PIN</string>
    <string name="send_money">Send Money</string>
    <string name="my_bills">My Bills</string>
    <string name="buy_airtime">Buy Airtime</string>
    <string name="mobile_money">Mobile Money</string>
    <string name="deposits">Deposit</string>
    <string name="loans">Loans</string>
    <string name="loyalty_points">Loyalty</string>
    <string name="my_account">My Account</string>
    <string name="let_s_action">Let\'s Action</string>
    <string name="statement">Statement</string>
    <string name="deals">Deals</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="notifications">Notifications</string>
    <string name="_0">0</string>
    <string name="go_back">Go Back</string>
    <string name="no_accounts_found">No accounts found</string>
    <string name="no_loans_found">No loans found</string>
    <string name="no_bills_found">No bills found</string>
    <string name="no_statements_found">No statements found</string>
    <string name="no_loyalty_points_found">No Loyalty points found</string>
    <string name="notifications_not_found">Notifications not found</string>
    <string name="no_balances_found">No balances found</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dashes">--------</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address_">Email Address</string>
    <string name="change_pin">Change Pin</string>
    <string name="log_out_text">Do you want to log out?</string>
    <string name="welcome_back">Welcome to Shofco Sacco</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="old_pin">Old Pin</string>
    <string name="view_statement">View Statement</string>
    <string name="bosa"><u>Savings</u></string>
    <string name="fosa"><u>Wallet</u></string>
    <string name="bosa_statement"><u>Savings Statement</u></string>
    <string name="fosa_statement"><u>Wallet Statement</u></string>
    <string name="select_source_account">Select Source Account <b>(FROM)</b></string>
    <string name="source_account">Source Account</string>
    <string name="select_destination_account">Select Destination Account <b>(TO)</b></string>
    <string name="destination_account">Destination Account</string>
    <string name="amount">Amount</string>
    <string name="confirm_transfer">Confirm Transfer</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="share_message">Hello there👋, try out Shofco Sacco Mobile App. Download it at https://play.google.com/store/apps/details?id=co.ke.shofcosacco</string>
    <string name="loyalty_account">Loyalty Account</string>
    <string name="account_type">Account Type</string>
    <string name="actual_balance">Actual Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="no_loan_statement_found">No loan statement found</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="view_loan">View Loan</string>
    <string name="repay_loan">Repay loan</string>
    <string name="loan_terms">Loan Terms</string>
    <string name="choose_loan_product">Choose loan product</string>
    <string name="cancel">Cancel</string>
    <string name="period_in_month_s">Period in Month(s)</string>
    <string name="no_loan_products_found">No loan products found</string>
    <string name="proceed">Proceed</string>
    <string name="proceed_and_update">Proceed &amp; Update</string>
    <string name="you_are_about_to_view_account_balances">You are about to view profile balances</string>
    <string name="you_are_about_to_view_account_statement">You are about to view profile statement</string>
    <string name="you_are_about_to_repay_your_loan_from_wallet">You are about to repay your loan from wallet</string>
    <string name="you_are_about_to_repay_your_loan_from_mpesa">You are about to repay your loan from MPESA</string>
    <string name="pay_now">Pay Now</string>
    <string name="m_pesa_number">M-Pesa Number</string>
    <string name="repay_full_amount">Repay Full Amount</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="loyalty">Loyalty</string>
    <string name="forgot_password">Forgot password</string>
    <string name="camera_rationale">App requires camera access</string>
    <string name="grant">Grant</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="error_phone_number">Invalid phone number</string>
    <string name="lbl_explore">Explore Now</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="need_help">Need Help?</string>
    <string name="location_text">Harry Thuku Road -University of Nairobi Main Campus Engineering Section</string>
    <string name="values">Contact Info\nPhone: +254700160012\nEmail: info@shofcosacco.com\nAddress: P.O.BOX 8303–00200, Nairobi\nOpen: Mon-Fri: 8.00 AM - 4.00 PM\n\nOpen: Saturday: 8.00 AM - 12:30 PM</string>
    <string name="enter_national_id">Enter National ID</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="answer">Answer</string>
    <string name="register">Register</string>
    <string name="enter_otp_sent_to_your_phone">Enter OTP sent to your phone</string>
    <string name="select_security_question">Select security question</string>
    <string name="do_you_want_to_register">Do you want to register?</string>
    <string name="confirm_pin_reset">Confirm Pin Reset</string>
    <string name="mpesa">MPESA</string>
    <string name="airtel">Airtel</string>
    <string name="telkom">Telkom</string>
    <string name="self">Self</string>
    <string name="other">Other</string>
    <string name="deposit_now">Deposit Now</string>
    <string name="deposit_to">Deposit To</string>
    <string name="deposit_from_fosa">Deposit to Wallet</string>
    <string name="deposit_from_bosa">Deposit to Savings</string>
    <string name="deposit">Deposit</string>
    <string name="repay_now">Repay Now</string>
    <string name="apply_now">Apply Now</string>
    <string name="withdraw_from">Withdraw From</string>
    <string name="submit">Submit</string>
    <string name="no_next_of_kins_available">No next of Kins available</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="reports">Reports</string>
    <string name="no_reports_found">No reports Found</string>
    <string name="download_now">Download Now</string>
    <string name="loans_guaranteed">Loans Guaranteed</string>
    <string name="detailed_statement">Detailed Statement</string>
    <string name="member_is_loan_guaranteed">Member is Loan Guaranteed</string>
    <string name="today">Today</string>
    <string name="no_detailed_statement_found">No detailed statement found</string>
    <string name="no_member_is_loan_guaranteed_found">No member is loan guaranteed found</string>
    <string name="no_loans_guaranteed_found">No Loans Guaranteed found</string>
    <string name="member_number_">Member Number</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="available">Available</string>
    <string name="actual">Actual</string>
    <string name="balances">Balances</string>
    <string name="savings_a_c_statement">Savings A/C Statement</string>
    <string name="savings_account_statement">Savings Account Statement</string>
    <string name="_0_points">0 Points</string>
    <string name="select_option_to_continue">Select an option to continue</string>
    <string name="personal_information">Persnal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="continue_">Continue</string>
    <string name="view_my_balances">View Balances</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="no_recent_transactions">No recent transactions</string>
    <string name="view_all">View All</string>
    <string name="balance">Balance</string>
    <string name="our_sectors">Our Sectors</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="transactions">Transactions</string>
    <string name="click_on_the_dates_to_filter">Click on the dates to filter</string>
    <string name="register_text">"You are about to register. Do you wish to continue?\n By Clicking Proceed you agree to register with SHOFCO SACCO"</string>
    <string name="check_eligibility">Check Eligibility</string>
    <string name="my_guarantors">My Guarantors</string>
    <string name="verify_pin_to_continue">Verify PIN to continue</string>
    <string name="activate">Activate Mobile</string>
    <string name="activate_">Activate</string>
    <string name="town">Town of Residence</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="county">County of Residence</string>
    <string name="sub_county">Sub County</string>
    <string name="ward">Ward</string>
    <string name="physical_address">Physical Address</string>
    <string name="take_passport">Take Passport</string>
    <string name="remove">Remove</string>
    <string name="full_name">Full Name</string>
    <string name="allocation">Allocation (%)</string>
    <string name="add">Add</string>
    <string name="add_next_of_kin">Add Next of Kin</string>
    <string name="take_signature">Take Signature</string>
    <string name="passport">Passport</string>
    <string name="signature">Signature</string>
    <string name="declaration"><u>Declaration</u></string>
    <string name="sacco_declaration">In making this membership application, I confirm that all particulars given by me are true. I consent that my personal
data may from time to time be used and disclosed for lawful purposes and in accordance with shofco Sacco policy and
relevant laws as amended from time to time. In the event I wish to amend my information provided to the Sacco, I commit to
follow the Sacco stipulated data change process. I do hereby agree to conform to the society’s By -laws and
any amendments thereof.</string>
    <string name="yes_i_accept">YES, I ACCEPT</string>
    <string name="no_i_reject">NO, I REJECT</string>
</resources>