<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24" />

    <item android:id="@+id/action_statements"
        android:title="@string/statement"
        android:icon="@drawable/baseline_bills_24" />

    <item
        android:title=""
        android:icon="@color/transparent"
        app:showAsAction="never"
        android:enabled="false"/>

    <item android:id="@+id/action_loyalty"
        android:title="@string/loyalty"
        android:icon="@drawable/baseline_loyalty_24" />

    <item android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24"/>

</menu>
