<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/ll_send_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:background="?selectableItemBackground">

        <ImageButton
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/background_oval"
            android:src="@drawable/baseline_arrow_upward_24"
            android:contentDescription="@string/send_money"
            app:tint="@color/white"
            android:gravity="center"
            android:clickable="false"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/send_money"
            android:textSize="12sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buy_airtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?selectableItemBackground">

        <ImageButton
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/background_oval"
            android:src="@drawable/baseline_phonelink_ring_24"
            app:tint="@color/white"
            android:gravity="center"
            android:contentDescription="@string/buy_airtime"
            android:clickable="false"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/buy_airtime"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_money_transfer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:background="?selectableItemBackground">

        <ImageButton
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:background="@drawable/background_oval"
            android:src="@drawable/baseline_send_to_mobile_24"
            app:tint="@color/white"
            android:contentDescription="@string/mobile_money"
            android:clickable="false"
            android:focusable="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/money_transfer"
            android:textSize="12sp"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>