<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayoutConfirmPin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="?actionBarSize"
    android:background="?colorSurface">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_24">



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/declaration"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <TextView
                    android:id="@+id/tv_declaration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/size_8"
                    android:textSize="16sp"
                    android:gravity="start"
                    android:lineSpacingExtra="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    android:text="@string/sacco_declaration" />

                <TextView
                    android:id="@+id/tv_i_accept"
                    style="@style/NHIFActionTextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_24"
                    android:layout_marginBottom="@dimen/size_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tv_declaration"
                    android:text="@string/yes_i_accept" />

                <TextView
                    android:id="@+id/tv_i_reject"
                    style="@style/NHIFActionTextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_24"
                    android:layout_marginBottom="@dimen/size_24"
                    android:background="@drawable/round_corner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/red"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/tv_i_accept"
                    android:text="@string/no_i_reject" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
