<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeToRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Surface"
            app:title="Settings"
            app:titleTextColor="@color/white"
            app:navigationIconTint="@color/white"
            android:background="@color/primary"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="?actionBarSize">



            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_my_profile"
                        style="@style/NHIFActionTextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_20"
                        android:backgroundTint="@color/primary"
                        android:textColor="@color/white"
                        android:text="@string/my_profile"
                        app:drawableStartCompat="@drawable/baseline_account_circle_24"/>

                    <TextView
                        android:id="@+id/tv_invite"
                        style="@style/NHIFActionTextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_20"
                        android:backgroundTint="@color/primary"
                        android:textColor="@color/white"
                        android:text="@string/invite_a_friend"
                        app:drawableStartCompat="@drawable/baseline_person_add_alt_1_24"/>



                    <TextView
                        android:id="@+id/tv_change_pin"
                        style="@style/NHIFActionTextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_20"
                        android:backgroundTint="@color/primary"
                        android:textColor="@color/white"
                        android:text="@string/change_pin"
                        app:drawableStartCompat="@drawable/baseline_change_circle_24" />

                    <TextView
                        android:id="@+id/tv_log_out"
                        style="@style/NHIFActionTextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/size_20"
                        android:text="@string/log_out"
                        app:drawableStartCompat="@drawable/baseline_logout_24"/>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>