<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayoutConfirmPin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="?actionBarSize">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close"
        android:src="@drawable/baseline_close_24"
        android:layout_margin="@dimen/grid_1"
        android:layout_alignParentEnd="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_24">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Enter your PIN" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:text="@string/verify_pin_to_continue"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_24"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="@dimen/size_24"
            android:hint="@string/enter_pin"
            android:textColorHint="@color/colorTextDark"
            android:theme="@style/TextInputLayoutAppearance"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:boxStrokeColor="@color/colorIconDark"
            app:boxStrokeErrorColor="@color/errorColor"
            app:boxStrokeWidthFocused="1dp"
            app:errorIconTint="@color/errorColor"
            app:errorTextColor="@color/errorColor"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/colorTextDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorIconDark"
            app:startIconTint="@color/colorIconDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_pin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cursorVisible="true"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:inputType="numberPassword"
                android:layout_marginBottom="@dimen/size_20"
                android:maxLines="1"
                android:maxLength="4"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorTextDark"
                android:textSize="14sp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_verify_otp"
            style="@style/NHIFActionTextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_24"
            android:layout_marginEnd="@dimen/size_24"
            android:layout_marginTop="@dimen/size_24"
            android:layout_marginBottom="@dimen/size_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_pin"
            android:text="@string/verify" />

        <TextView
            android:id="@+id/tv_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/size_24"
            android:visibility="gone"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_verify_otp"
            android:text="@string/resend_otp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
